# TC1D

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  environment.yml  noxfile.py  postBuild  pyproject.toml  rtd-requirements.txt  sample_data.csv
.github/workflows/: run-tests.yml
RDAAM_He/: Makefile
c/: Makefile  ketch.c  ketch_aft.c
cpp/: Makefile  RDAAM.cpp  RDAAM.h  RDAAM_He.cpp
csv/: granite_solidus.csv  olivine_solidus.csv  sample_data.csv
data/: sample_data_w_depo_ages.csv
docs/: rtd-requirements.txt
docs/source/: age-data.md  conf.py  erosion-models.md  example-plots.md  index.rst  reading-file-data.md  reference.rst  refs.bib  usage.rst
ketch_aft/: Makefile  ketch.h
md/: erosion-models.md
png/: README.md
py/: TC1D.py  __init__.py  batch_delam1D.py  cordillera_delamination.py  delam1D.py  explore_tc1d.ipynb  mad_trax.py  madtrax_apatite.py  madtrax_zircon.py  tc1d.py  tc1d_cli.py  test_TC1D.py
py/melts_data/: dryBasalt.csv  wetFelsic4.csv  wetImed3.csv
src/RDAAM_He/: Makefile  RDAAM.h  RDAAM_He.cpp
src/ketch_aft/: Makefile  ketch_aft.c
src/tc1d/: __init__.py  tc1d.py  tc1d_cli.py
src/tc1d/madtrax/: __init__.py  madtrax_zircon.py
src/tc1d/melts_data/: dryFelsic.csv
tc1d/: __init__.py  explore_tc1d.ipynb  tc1d.py  tc1d_cli.py
tc1d/melts_data/: wetBasalt2.csv
tests/: test_TC1D.py  test_tc1d.py
