[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tc1d"
version = "0.1"
authors = [
    {name = "Dave Whipp", email = "david.whipp@helsinki.fi"},
]
#maintainers = [
#    {name = "All the contributors"},
#]
description = "A 1D thermal model and thermochronometer age prediction code"
keywords = ["thermochronology", "heat transfer", "geology", "geophysics"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "corner",
    "emcee",
    "matplotlib",
    "neighpy",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.urls]
homepage = "https://tc1d.readthedocs.io/"
repository = "https://github.com/HUGG/TC1D"
documentation = "https://tc1d.readthedocs.io/"

[project.scripts]
tc1d-cli = "tc1d.tc1d_cli:main"