[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tc1d"
version = "0.1"
authors = [
    {name = "Dave Whipp", email = "david.whipp@helsinki.fi"},
]
#maintainers = [
#    {name = "All the contributors"},
#]
description = "A 1D thermal model and thermochronometer age prediction code"
keywords = ["thermochronology", "heat transfer", "geology", "geophysics"]
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "corner",
    "emcee",
    "matplotlib",
    "neighpy",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.urls]
homepage = "https://tc1d.readthedocs.io/"
repository = "https://github.com/HUGG/TC1D"
documentation = "https://tc1d.readthedocs.io/"

[project.scripts]
tc1d-cli = "tc1d.tc1d_cli:main"